[package]
name = "app_template" #todo
version = "0.1.0"
publish = false
authors = ["Tomasz Nehring <tomasz_nehrind@outlook.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.9.1" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.*", default-features = false }
image = { version = "0.*", default-features = false }

[build-dependencies]
embed-resource = "1.6.10"
